[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/xolonium/xolonium-fonts-4.1/ttf/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ScoreOverlay.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/Woosh-Mark_DiAngelo-4778593.wav" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 31
font_data = ExtResource( 1 )

[node name="ScoreOverlay" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Score" type="CanvasLayer" parent="."]

[node name="Player1" type="Label" parent="Score"]
visible = false
margin_left = 17.0
margin_top = 1.0
margin_right = 132.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartWave" type="CanvasLayer" parent="."]

[node name="PlayerLabel" type="Label" parent="StartWave"]
visible = false
margin_left = 415.8
margin_top = 153.244
margin_right = 557.8
margin_bottom = 180.244
custom_fonts/font = SubResource( 1 )
text = "PLAYER "
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerNumber" type="Label" parent="StartWave"]
visible = false
margin_left = 577.8
margin_top = 153.244
margin_right = 687.8
margin_bottom = 180.244
custom_fonts/font = SubResource( 1 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multiplier" type="Label" parent="StartWave"]
visible = false
margin_left = 435.468
margin_top = 212.0
margin_right = 473.468
margin_bottom = 247.0
custom_fonts/font = SubResource( 1 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointLabel" type="Label" parent="StartWave"]
visible = false
margin_left = 485.646
margin_top = 212.0
margin_right = 654.646
margin_bottom = 247.0
custom_fonts/font = SubResource( 1 )
text = "X   POINTS"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefendLabel" type="Label" parent="StartWave"]
visible = false
margin_left = 231.063
margin_top = 440.749
margin_right = 354.063
margin_bottom = 473.749
custom_fonts/font = SubResource( 1 )
text = "DEFEND"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CitiesLabel" type="Label" parent="StartWave"]
visible = false
margin_left = 671.338
margin_top = 441.498
margin_right = 781.338
margin_bottom = 474.498
custom_fonts/font = SubResource( 1 )
text = "CITIES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGame" type="CanvasLayer" parent="."]

[node name="StartButton" type="Button" parent="StartGame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -28.0
margin_right = 95.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressStart" type="Label" parent="StartGame"]
visible = false
margin_left = 382.75
margin_top = 344.0
margin_right = 680.75
margin_bottom = 377.0
custom_fonts/font = SubResource( 1 )
text = "PRESS '1' TO START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bonus" type="CanvasLayer" parent="."]

[node name="BonusPoints" type="Label" parent="Bonus"]
visible = false
margin_left = 410.316
margin_top = 160.397
margin_right = 636.316
margin_bottom = 193.397
custom_fonts/font = SubResource( 1 )
text = "BONUS POINTS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BonusCity" type="Label" parent="Bonus"]
visible = false
margin_left = 426.352
margin_top = 421.431
margin_right = 652.352
margin_bottom = 454.431
custom_fonts/font = SubResource( 1 )
text = "BONUS CITY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ammo" type="Label" parent="Bonus"]
visible = false
margin_left = 305.0
margin_top = 212.0
margin_right = 395.0
margin_bottom = 247.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cities" type="Label" parent="Bonus"]
visible = false
margin_left = 306.0
margin_top = 276.0
margin_right = 395.0
margin_bottom = 311.0
custom_fonts/font = SubResource( 1 )
text = "1"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Whoosh" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Pause" type="CanvasLayer" parent="."]

[node name="PauseLabel" type="Label" parent="Pause"]
margin_left = 995.231
margin_top = 11.329
margin_right = 1014.23
margin_bottom = 46.329
custom_fonts/font = SubResource( 1 )
text = "\""
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartGame/StartButton" to="." method="_on_StartButton_pressed"]
